--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,48 @@
+* {
+  margin: 0 auto;
+  font-size: 24px;
+  box-sizing: border-box;
+}
+
 .header {
   background-color: rgb(54, 54, 54);
   color: white;
   text-align: center;
   font-family: sans-serif;
   font-size: 36px;
+  margin: 16px;
+  padding: 64px;
 }
 
 body {
   font-family: sans-serif;
+  margin: 16px;
+}
+
+p,
+ul,
+ol,
+img {
+  margin: 16px;
 }
 
 .link {
   font-size: 24px;
   font-weight: bold;
+  margin: 16px;
+  padding: 80px 160px;
+  background-color: lightskyblue;
 }
 
 #recipename {
-  background-color: rgb(128, 0, 248);
+  background-color: rgb(132, 0, 255);
   color: white;
-  text-align: center;
+  padding: 24px;
+  font-size: 32px;
+  margin-right: 
 }
+
+
 ul.ingredient {
   font-style: italic;
   font-size: 18px;
